test/classes/generic/with-runtime-fields-errors.error.borrowed.good
with-runtime-fields-errors.chpl:7: In method 'tField':
with-runtime-fields-errors.chpl:7: error: accessing the runtime-type field tField of a nilable class. Consider applying postfix-! operator to the class before accessing this field.
  with-runtime-fields-errors.chpl:30: called as (CC([domain(1,int(64),false)] int(64))?).tField
